1-Go基础/golang-grammar/myproject/deployments/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myproject-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.myproject.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myproject-server
                port:
                  number: 80
